Fix serializer and semantic analyzer compile issues